--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -101,7 +101,7 @@
     "    !git clone https://github.com/richrobber2/canvas-zoom\n",
     "    !git clone https://github.com/viyiviyi/stable-diffusion-webui-zoomimage\n",
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
-    "    !sed -i 's/threshold\", 0.7/threshold\", 99999999/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
+    "    !sed -i 's/fw_threshold\", 0.7/fw_threshold\", 999999999/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
     "    #!git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
     "    #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
     "    #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
@@ -292,6 +292,7 @@
     "    %cd /home/studio-lab-user/content/SDZ\n",
     "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle --enable-insecure-extension-access\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py\n",
+    "    clear_output()\n",
     "    cprint(f\"SDZ FINISH\", color=\"flat_cyan\")\n",
     "\n",
     "def opcion4():\n",
