--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -57,6 +57,7 @@
     "\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
+    "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
     "\n",
     "    #Vae\n",
     "    %cd /home/studio-lab-user/content/SDZ/models/VAE\n",
