--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -39,8 +39,10 @@
     "    %conda install -q -y glib\n",
     "    %pip install -q opencv-python-headless huggingface-hub\n",
     "    !pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
-    "    !pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
-    "    %pip install https://github.com/Bing-su/GroundingDINO/releases/download/0.1.0-2.0.1/groundingdino-0.1.0+torch2.0.1.cu118-cp39-cp39-linux_x86_64.whl -U\n",
+    "    !pip install -q xformers==0.0.20 triton==2.0.0 -U\n",
+    "    !pip install insightface==0.7.3\n",
+    "    !pip install onnx==1.14.0\n",
+    "    !pip install onnxruntime==1.15.0\n",
     "\n",
     "    %env TF_CPP_MIN_LOG_LEVEL=1\n",
     "    !git clone --depth 1 https://github.com/AUTOMATIC1111/stable-diffusion-webui SDZ\n",
@@ -57,7 +59,7 @@
     "\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
-    "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
+    "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
     "\n",
     "    #Vae\n",
     "    %cd /home/studio-lab-user/content/SDZ/models/VAE\n",
@@ -93,6 +95,7 @@
     "\n",
     "    !git clone https://github.com/etherealxx/batchlinks-webui\n",
     "    !git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
+    "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
     "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111\n",
     "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\n",
     "    !git clone https://github.com/zanllp/sd-webui-infinite-image-browsing\n",
@@ -102,6 +105,8 @@
     "    !git clone https://github.com/richrobber2/canvas-zoom\n",
     "    !git clone https://github.com/viyiviyi/stable-diffusion-webui-zoomimage\n",
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
+    "    #!git clone https://github.com/A-I-Channel/explorer-image\n",
+    "    #!git clone https://github.com/A-I-Channel/public-link\n",
     "    !sed -i 's/fw_threshold\", 0.7/fw_threshold\", 999999999/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
     "    #!git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
     "    #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
@@ -109,7 +114,9 @@
     "    #!git clone https://github.com/thygate/stable-diffusion-webui-depthmap-script.git\n",
     "    #!git clone https://github.com/graemeniedermayer/stable-diffusion-webui-normalmap-script.git\n",
     "    #!git clone https://github.com/dustysys/ddetailer.git\n",
-    "    #!git clone https://github.com/Bing-su/adetailer.git\n",
+    "    !git clone https://github.com/Bing-su/adetailer.git\n",
+    "    #!https://github.com/A-I-Channel/sdw-wd14-tagger\n",
+    "    #!git clone https://github.com/A-I-Channel/AI_Channel_Theme\n",
     "    #!git clone https://github.com/volotat/SD-CN-Animation.git\n",
     "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-promptgen.git\n",
     "    #!git clone https://github.com/imrayya/stable-diffusion-webui-Prompt_Generator.git\n",
@@ -291,7 +298,7 @@
     "    \n",
     "def opcion3():\n",
     "    %cd /home/studio-lab-user/content/SDZ\n",
-    "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle --enable-insecure-extension-access\"\n",
+    "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --share --api --cloudflared --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py\n",
     "    clear_output()\n",
     "    cprint(f\"SDZ FINISH\", color=\"flat_cyan\")\n",
