--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -298,7 +298,7 @@
     "    \n",
     "def opcion3():\n",
     "    %cd /home/studio-lab-user/content/SDZ\n",
-    "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --share --api --cloudflared --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
+    "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --share --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py\n",
     "    clear_output()\n",
     "    cprint(f\"SDZ FINISH\", color=\"flat_cyan\")\n",
