--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -10,18 +10,20 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from IPython.display import clear_output\n",
+    "from IPython.display import clear_output, display, HTML\n",
+    "from IPython.utils import capture\n",
+    "\n",
     "import importlib.util\n",
     "\n",
     "if importlib.util.find_spec(\"psutil\") is None:\n",
-    "        # Instalar psutil\n",
+    "    with capture.capture_output() as cap:\n",
     "        !pip install psutil\n",
-    "        print(\"psutil installed\")\n",
+    "        clear_output()\n",
     "        \n",
     "if importlib.util.find_spec(\"colablib\") is None:\n",
-    "        # Instalar psutil\n",
+    "    with capture.capture_output() as cap:\n",
     "        !pip install -q git+https://github.com/DEX-1101/colablib\n",
-    "        print(\"colablib installed\")\n",
+    "        clear_output()\n",
     "        \n",
     "from colablib.colored_print import cprint, print_line\n",
     "\n",
@@ -33,16 +35,15 @@
     "    !mkdir /home/studio-lab-user/content\n",
     "    %cd /home/studio-lab-user/content\n",
     "    \n",
-    "    !conda install -c conda-forge libglib -y & conda update -n base conda -y\n",
     "    %conda install -q -y aria2\n",
     "    %conda install -q -y libglib2.0-0\n",
     "    %conda install -q -y glib\n",
     "    %pip install -q opencv-python-headless huggingface-hub\n",
-    "    !pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
-    "    !pip install -q xformers==0.0.20 triton==2.0.0 -U\n",
-    "    !pip install insightface==0.7.3\n",
-    "    !pip install onnx==1.14.0\n",
-    "    !pip install onnxruntime==1.15.0\n",
+    "    #!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
+    "    #!pip install -q xformers==0.0.20 triton==2.0.0 -U\n",
+    "    #!pip install insightface==0.7.3\n",
+    "    #!pip install onnx==1.14.0\n",
+    "    #!pip install onnxruntime==1.15.0\n",
     "\n",
     "    %env TF_CPP_MIN_LOG_LEVEL=1\n",
     "    !git clone --depth 1 https://github.com/AUTOMATIC1111/stable-diffusion-webui SDZ\n",
@@ -59,12 +60,12 @@
     "\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
-    "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
+    "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
     "\n",
     "    #Vae\n",
     "    %cd /home/studio-lab-user/content/SDZ/models/VAE\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/sdxl-vae-fp16.safetensors\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt -o vae-ft-mse-840000-ema-pruned.ckpt\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/sdxl-vae-fp16.safetensors -o sdxl-vae-fp16.safetensors\n",
     "\n",
     "    #Embeddings\n",
     "    %cd /home/studio-lab-user/content/SDZ/embeddings\n",
@@ -84,12 +85,12 @@
     "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
     "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
     "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORASD15SD2_sd15.safetensors\n",
-    "    !wget --timestamping https://civitai.com/api/download/models/63006 -O LowRA.safetensors\n",
-    "    !wget --timestamping https://civitai.com/api/download/models/117467 -O polyhedron_skinny_all.pt\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/63006\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/117467\n",
     "    !wget --timestamping https://huggingface.co/casque/detailed_eye-10/resolve/main/detailed_eye-10.safetensors\n",
     "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
-    "    !wget --timestamping https://civitai.com/api/download/models/62833 -O add_detail.safetensors\n",
-    "\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/62833\n",
+    "    \n",
     "    #extensions\n",
     "    %cd /home/studio-lab-user/content/SDZ/extensions\n",
     "\n",
@@ -107,7 +108,8 @@
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
     "    #!git clone https://github.com/A-I-Channel/explorer-image\n",
     "    #!git clone https://github.com/A-I-Channel/public-link\n",
-    "    !sed -i 's/fw_threshold\", 0.7/fw_threshold\", 999999999/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
+    "    !sed -i '17,44d' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
+    "    !sed -i '17s/.*/    return False/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
     "    #!git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
     "    #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
     "    #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
@@ -200,8 +202,8 @@
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_RealisticRescaler_100000_G.pth\n",
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_Valar_v1.pth\n",
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4xPSNR.pth\n",
-    "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/8x_NMKD-Superscale_150000_G.pth\n",
-    "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/8x_NMKD-Typescale_175k.pth\n",
+    "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/8x_NMKD-Superscale_150000_G.pth\n",
+    "    !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/8x_NMKD-Typescale_175k.pth\n",
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/8xPSNR.pth\n",
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/16xPSNR.pth\n",
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/A_ESRGAN_Single.pth\n",
@@ -299,7 +301,7 @@
     "    \n",
     "def opcion3():\n",
     "    %cd /home/studio-lab-user/content/SDZ\n",
-    "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --share --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
+    "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py\n",
     "    clear_output()\n",
     "    cprint(f\"SDZ FINISH\", color=\"flat_cyan\")\n",
@@ -331,7 +333,7 @@
     "    cprint(f\"GOODBYE\", color=\"flat_cyan\")\n",
     "\n",
     "while True:\n",
-    "    print(\"SDZ Menu:\")\n",
+    "    cprint(f\">>> SDZ MENU:\", color=\"flat_cyan\")\n",
     "    print(\"1. Install SDZ\")\n",
     "    print(\"2. Controlnet Models\")\n",
     "    print(\"3. Run SDZ\")\n",
@@ -340,7 +342,7 @@
     "    print(\"6. Delete All\")\n",
     "    print(\"7. Exit\")\n",
     "    \n",
-    "    opcion = input(\"Select an option: \")\n",
+    "    opcion = input(\" <<< Select an option:\")\n",
     "    \n",
     "    if opcion == \"1\":\n",
     "        opcion1()\n",
