--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -301,8 +301,10 @@
     "    \n",
     "def opcion3():\n",
     "    %cd /home/studio-lab-user/content/SDZ\n",
+    "    clear_output()\n",
+    "    cprint(f\"SDZ LOADING\", color=\"flat_cyan\")\n",
     "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
-    "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py\n",
+    "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    clear_output()\n",
     "    cprint(f\"SDZ FINISH\", color=\"flat_cyan\")\n",
     "\n",
