--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -95,7 +95,7 @@
     "    %cd /home/studio-lab-user/content/SDZ/extensions\n",
     "\n",
     "    !git clone https://github.com/etherealxx/batchlinks-webui\n",
-    "    !git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
+    "    #!git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
     "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
     "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111\n",
     "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\n",
@@ -108,8 +108,10 @@
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
     "    #!git clone https://github.com/A-I-Channel/explorer-image\n",
     "    #!git clone https://github.com/A-I-Channel/public-link\n",
-    "    !sed -i '17,44d' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
-    "    !sed -i '17s/.*/    return False/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
+    "\n",
+    "    #!sed -i '17,44d' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
+    "    #!sed -i '17s/.*/    return False/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
+    "    \n",
     "    #!git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
     "    #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
     "    #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
@@ -302,7 +304,7 @@
     "def opcion3():\n",
     "    %cd /home/studio-lab-user/content/SDZ\n",
     "    clear_output()\n",
-    "    cprint(f\"SDZ LOADING\", color=\"flat_cyan\")\n",
+    "    cprint(f\"SDZ RUNNING\", color=\"flat_cyan\")\n",
     "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    clear_output()\n",
@@ -332,7 +334,7 @@
     "\n",
     "def opcion7():\n",
     "    clear_output()\n",
-    "    cprint(f\"GOODBYE\", color=\"flat_cyan\")\n",
+    "    cprint(f\"GOODBYE!\", color=\"flat_cyan\")\n",
     "\n",
     "while True:\n",
     "    cprint(f\">>> SDZ MENU:\", color=\"flat_cyan\")\n",
