menu update image

--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -12,7 +12,9 @@
     "import os\n",
     "from IPython.display import clear_output, display, HTML\n",
     "from IPython.utils import capture\n",
-    "\n",
+    "import requests\n",
+    "from PIL import Image\n",
+    "from io import BytesIO\n",
     "import importlib.util\n",
     "\n",
     "if importlib.util.find_spec(\"psutil\") is None:\n",
@@ -337,16 +339,26 @@
     "    cprint(f\"GOODBYE!\", color=\"flat_cyan\")\n",
     "\n",
     "while True:\n",
-    "    cprint(f\">>> SDZ MENU:\", color=\"flat_cyan\")\n",
+    "    url = \"https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ3.png?raw=true\"\n",
+    "    response = requests.get(url)\n",
+    "    image = Image.open(BytesIO(response.content))\n",
+    "    width = 50\n",
+    "    height = int(image.height * (width / image.width))\n",
+    "    resized_image = image.resize((width, height))\n",
+    "    print(\" \")\n",
+    "    resized_image.show()\n",
+    "\n",
+    "    cprint(f\"SDZ MENU:\", color=\"flat_cyan\")\n",
+    "    print(\" \")\n",
     "    print(\"1. Install SDZ\")\n",
     "    print(\"2. Controlnet Models\")\n",
-    "    print(\"3. Run SDZ\")\n",
+    "    print(\"3. --- Run SDZ ---\")\n",
     "    print(\"4. Check Space Disk\")\n",
     "    print(\"5. Clean Cache\")\n",
     "    print(\"6. Delete All\")\n",
     "    print(\"7. Exit\")\n",
-    "    \n",
-    "    opcion = input(\" <<< Select an option:\")\n",
+    "    print(\" \")\n",
+    "    opcion = input(\" Select an option:\")\n",
     "    \n",
     "    if opcion == \"1\":\n",
     "        opcion1()\n",
