--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -41,6 +41,8 @@
     "    %conda install -q -y libglib2.0-0\n",
     "    %conda install -q -y glib\n",
     "    %pip install -q opencv-python-headless huggingface-hub\n",
+    "    !pip3 install --upgrade requests\n",
+    "    #!pip install opencv-python-headless ; pip install  opencv-contrib-python ; pip install opencv-python\n",
     "    #!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
     "    #!pip install -q xformers==0.0.20 triton==2.0.0 -U\n",
     "    #!pip install insightface==0.7.3\n",
@@ -113,7 +115,7 @@
     "\n",
     "    #!sed -i '17,44d' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
     "    #!sed -i '17s/.*/    return False/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
-    "    \n",
+    "\n",
     "    #!git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
     "    #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
     "    #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
@@ -225,11 +227,26 @@
     "    cprint(f\"SDZ INSTALLED\", color=\"flat_cyan\")\n",
     "    \n",
     "def opcion2():\n",
+    "    %cd /home/studio-lab-user/content/SDZ\n",
+    "    !git pull\n",
+    "    clear_output()\n",
+    "    cprint(f\"SDZ UPDATED\", color=\"flat_cyan\")\n",
+    "    \n",
+    "def opcion3():\n",
+    "    %cd /home/studio-lab-user/content/SDZ\n",
+    "    clear_output()\n",
+    "    cprint(f\"SDZ RUNNING\", color=\"flat_cyan\")\n",
+    "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
+    "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
+    "    clear_output()\n",
+    "    cprint(f\"SDZ FINISH\", color=\"flat_cyan\")\n",
+    "    \n",
+    "def opcion4():\n",
     "    #Controlnet\n",
     "    canny = \"0\"\n",
     "    openpose = \"1\"\n",
     "    depth = \"1\"\n",
-    "    normal_map = \"0\"\n",
+    "    normal_map = \"1\"\n",
     "    mlsd = \"0\"\n",
     "    lineart = \"0\"\n",
     "    soft_edge = \"0\"\n",
@@ -303,16 +320,16 @@
     "    clear_output()\n",
     "    cprint(f\"CONTROLNET MODELS DOWNLOADED\", color=\"flat_cyan\")\n",
     "    \n",
-    "def opcion3():\n",
-    "    %cd /home/studio-lab-user/content/SDZ\n",
+    "def opcion5():\n",
+    "    %cd /home/studio-lab-user/content/SDZ/extensions\n",
+    "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+    "    %cd /home/studio-lab-user/content/SDZ/extensions/sd_dreambooth_extension\n",
+    "    !pip install -r /home/studio-lab-user/content/SDZ/requirements.txt\n",
     "    clear_output()\n",
-    "    cprint(f\"SDZ RUNNING\", color=\"flat_cyan\")\n",
-    "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
-    "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
-    "    clear_output()\n",
-    "    cprint(f\"SDZ FINISH\", color=\"flat_cyan\")\n",
+    "    cprint(f\"DREAMBOOTH INSTALLED\", color=\"flat_cyan\")\n",
     "\n",
-    "def opcion4():\n",
+    "\n",
+    "def opcion6():\n",
     "    import os\n",
     "    import psutil\n",
     "    directory = os.getcwd()\n",
@@ -323,18 +340,18 @@
     "    clear_output()\n",
     "    cprint(f\"TOTAL STORAGE: [ {total:.2f} GB ] USED: [ {used:.2f} GB ] FREE: [ {free:.2f} GB ]\", color=\"flat_cyan\")\n",
     "\n",
-    "def opcion5():\n",
+    "def opcion7():\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
     "    clear_output()\n",
     "    cprint(f\"CLEANED UNNECESSARY CACHE/FILES\", color=\"flat_cyan\")\n",
     "    \n",
-    "def opcion6():\n",
+    "def opcion8():\n",
     "    !rm -rf /home/studio-lab-user/\n",
     "    clear_output()\n",
     "    cprint(f\"RUN THIS CELL, IT WILL DELETE ENTIRE NOTEBOOK, OR IF YOU WANT A FRESH-INSTALL NOTEBOOK, then DO : RUN THIS CELL > STOP RUNTIME > STAR AGAIN\", color=\"flat_cyan\")\n",
     "\n",
-    "def opcion7():\n",
+    "def opcion9():\n",
     "    clear_output()\n",
     "    cprint(f\"GOODBYE!\", color=\"flat_cyan\")\n",
     "\n",
@@ -351,12 +368,14 @@
     "    cprint(f\"SDZ MENU:\", color=\"flat_cyan\")\n",
     "    print(\" \")\n",
     "    print(\"1. Install SDZ\")\n",
-    "    print(\"2. Controlnet Models\")\n",
+    "    print(\"2. Update SDZ\")\n",
     "    print(\"3. --- Run SDZ ---\")\n",
-    "    print(\"4. Check Space Disk\")\n",
-    "    print(\"5. Clean Cache\")\n",
-    "    print(\"6. Delete All\")\n",
-    "    print(\"7. Exit\")\n",
+    "    print(\"4. Controlnet Models\")\n",
+    "    print(\"5. Install DreamBooth\")\n",
+    "    print(\"6. Check Space Disk\")\n",
+    "    print(\"7. Clean Cache\")\n",
+    "    print(\"8. Delete All\")\n",
+    "    print(\"9. Exit\")\n",
     "    print(\" \")\n",
     "    opcion = input(\" Select an option:\")\n",
     "    \n",
@@ -377,9 +396,15 @@
     "    \n",
     "    elif opcion == \"6\":\n",
     "        opcion6()  \n",
-    "    \n",
+    "\n",
     "    elif opcion == \"7\":\n",
-    "        opcion7()\n",
+    "        opcion7() \n",
+    "        \n",
+    "    elif opcion == \"8\":\n",
+    "        opcion8() \n",
+    "    \n",
+    "    elif opcion == \"9\":\n",
+    "        opcion9()\n",
     "        break\n",
     "    \n",
     "    else:\n",
