--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -74,13 +74,13 @@
     "    #Embeddings\n",
     "    %cd /home/studio-lab-user/content/SDZ/embeddings\n",
     "\n",
-    "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-hands-5.pt\n",
-    "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/easynegative.safetensors\n",
+    "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-hands-5.pt\n",
+    "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/easynegative.safetensors\n",
     "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/EasyNegativeV2.safetensors\n",
-    "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/FastNegativeEmbedding.pt\n",
-    "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-artist-anime.pt\n",
-    "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-artist.pt\n",
-    "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/negativeXL.safetensors\n",
+    "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/FastNegativeEmbedding.pt\n",
+    "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-artist-anime.pt\n",
+    "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-artist.pt\n",
+    "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/negativeXL.safetensors\n",
     "\n",
     "    #Lora\n",
     "    !mkdir /home/studio-lab-user/content/SDZ/models/Lora\n",
