--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -10,6 +10,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
     "from IPython.display import clear_output, display, HTML\n",
     "from IPython.utils import capture\n",
     "import requests\n",
@@ -17,8 +18,12 @@
     "\n",
     "if importlib.util.find_spec(\"psutil\") is None:\n",
     "    with capture.capture_output() as cap:\n",
-    "        !pip install psutil\n",
+    "        !pip install -q --upgrade pip\n",
+    "        !pip install -q --upgrade psutil\n",
+    "        !pip install -q --upgrade torchsde\n",
     "        !pip install -q git+https://github.com/DEX-1101/colablib\n",
+    "        !pip install -q pytz\n",
+    "        !pip install -q tensorflow\n",
     "    clear_output()\n",
     "        \n",
     "from colablib.colored_print import cprint, print_line\n",
@@ -35,6 +40,9 @@
     "    %conda install -q -y glib\n",
     "    %pip install -q opencv-python-headless huggingface-hub\n",
     "    !pip3 install --upgrade requests\n",
+    "    !pip install -q torch==2.0.1+cu118 torchvision==0.15.2+cu118 torchaudio==2.0.2+cu118 torchtext==0.15.2 torchdata==0.6.1 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
+    "    !pip install -q xformers==0.0.20 triton==2.0.0 -U\n",
+    "\n",
     "    #!pip install opencv-python-headless ; pip install  opencv-contrib-python ; pip install opencv-python\n",
     "    #!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
     "    #!pip install -q xformers==0.0.20 triton==2.0.0 -U\n",
