--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -18,12 +18,8 @@
     "\n",
     "if importlib.util.find_spec(\"psutil\") is None:\n",
     "    with capture.capture_output() as cap:\n",
-    "        !pip install -q --upgrade pip\n",
     "        !pip install -q --upgrade psutil\n",
-    "        !pip install -q --upgrade torchsde\n",
-    "        !pip install -q git+https://github.com/DEX-1101/colablib\n",
-    "        !pip install -q pytz\n",
-    "        !pip install -q tensorflow\n",
+    "        !pip install colablib\n",
     "    clear_output()\n",
     "        \n",
     "from colablib.colored_print import cprint, print_line\n",
@@ -34,6 +30,11 @@
     "    cprint(f\"WAIT A MOMENT WHILE THE INSTALLATION FINISH\", color=\"flat_cyan\")\n",
     "    !mkdir /home/studio-lab-user/content\n",
     "    %cd /home/studio-lab-user/content\n",
+    "\n",
+    "    !pip install -q --upgrade pi\n",
+    "    !pip install -q --upgrade torchsde\n",
+    "    !pip install -q pytz\n",
+    "    !pip install -q tensorflow\n",
     "    \n",
     "    %conda install -q -y aria2\n",
     "    %conda install -q -y libglib2.0-0\n",
@@ -52,7 +53,6 @@
     "\n",
     "    %env TF_CPP_MIN_LOG_LEVEL=1\n",
     "    !git clone --depth 1 https://github.com/AUTOMATIC1111/stable-diffusion-webui SDZ\n",
-    "    !pip install -r /home/studio-lab-user/content/SDZ/requirements_versions.txt\n",
     "\n",
     "    #Model\n",
     "    %cd /home/studio-lab-user/content/SDZ/models/Stable-diffusion\n",
@@ -223,7 +223,8 @@
     "    #!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/WaifuGAN_v3_30000.pth\n",
     "    #wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.3.pth\n",
     "    #wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.4.pth\n",
-    "    \n",
+    "\n",
+    "    !pip install -r /home/studio-lab-user/content/SDZ/requirements_versions.txt\n",
     "    clear_output()\n",
     "    cprint(f\"SDZ INSTALLED\", color=\"flat_cyan\")\n",
     "    \n",
@@ -357,14 +358,6 @@
     "    cprint(f\"GOODBYE!\", color=\"flat_cyan\")\n",
     "\n",
     "while True:\n",
-    "    url = \"https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ3.png?raw=true\"\n",
-    "    response = requests.get(url)\n",
-    "    image = Image.open(BytesIO(response.content))\n",
-    "    width = 50\n",
-    "    height = int(image.height * (width / image.width))\n",
-    "    resized_image = image.resize((width, height))\n",
-    "    print(\" \")\n",
-    "    resized_image.show()\n",
     "\n",
     "    cprint(f\"SDZ MENU:\", color=\"flat_cyan\")\n",
     "    print(\" \")\n",
