--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -31,7 +31,7 @@
     "    !mkdir /home/studio-lab-user/content\n",
     "    %cd /home/studio-lab-user/content\n",
     "\n",
-    "    !pip install -q --upgrade pi\n",
+    "    !pip install -q --upgrade pip\n",
     "    !pip install -q --upgrade torchsde\n",
     "    !pip install -q pytz\n",
     "    !pip install -q tensorflow\n",
