--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -15,19 +15,14 @@
     "from IPython.utils import capture\n",
     "import requests\n",
     "import importlib.util\n",
-    "\n",
-    "if importlib.util.find_spec(\"psutil\") is None:\n",
-    "    with capture.capture_output() as cap:\n",
-    "        !pip install -q --upgrade psutil\n",
-    "        !pip install colablib\n",
-    "    clear_output()\n",
-    "        \n",
-    "from colablib.colored_print import cprint, print_line\n",
-    "\n",
-    "clear_output()\n",
+    "COLOR_CYAN = '\\033[96;1;38;5;51m'\n",
+    "COLOR_RESET = '\\033[0m'\n",
     "\n",
     "def opcion1():\n",
-    "    cprint(f\"WAIT A MOMENT WHILE THE INSTALLATION FINISH\", color=\"flat_cyan\")\n",
+    "    print(COLOR_CYAN + \"WAIT A MOMENT WHILE THE INSTALLATION FINISH\" + COLOR_RESET)\n",
+    "    !pip install colablib\n",
+    "    !pip install -q --upgrade psutil\n",
+    "    \n",
     "    !mkdir /home/studio-lab-user/content\n",
     "    %cd /home/studio-lab-user/content\n",
     "\n",
@@ -224,24 +219,24 @@
     "    #wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.3.pth\n",
     "    #wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.4.pth\n",
     "\n",
-    "    !pip install -r /home/studio-lab-user/content/SDZ/requirements_versions.txt\n",
+    "    #!pip install -r /home/studio-lab-user/content/SDZ/requirements_versions.txt\n",
     "    clear_output()\n",
-    "    cprint(f\"SDZ INSTALLED\", color=\"flat_cyan\")\n",
+    "    print(COLOR_CYAN + \"SDZ INSTALLED\" + COLOR_RESET)\n",
     "    \n",
     "def opcion2():\n",
     "    %cd /home/studio-lab-user/content/SDZ\n",
     "    !git pull\n",
     "    clear_output()\n",
-    "    cprint(f\"SDZ UPDATED\", color=\"flat_cyan\")\n",
+    "    print(COLOR_CYAN + \"SDZ UPDATED\" + COLOR_RESET)\n",
     "    \n",
     "def opcion3():\n",
     "    %cd /home/studio-lab-user/content/SDZ\n",
     "    clear_output()\n",
-    "    cprint(f\"SDZ RUNNING\", color=\"flat_cyan\")\n",
+    "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
     "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    clear_output()\n",
-    "    cprint(f\"SDZ FINISH\", color=\"flat_cyan\")\n",
+    "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
     "    \n",
     "def opcion4():\n",
     "    #Controlnet\n",
@@ -320,7 +315,7 @@
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_zoedepth_sd15v1.pth -o t2iadapter_zoedepth_sd15v1.pth     \n",
     "    main()\n",
     "    clear_output()\n",
-    "    cprint(f\"CONTROLNET MODELS DOWNLOADED\", color=\"flat_cyan\")\n",
+    "    print(COLOR_CYAN + \"CONTROLNET MODELS DOWNLOADED\" + COLOR_RESET)\n",
     "    \n",
     "def opcion5():\n",
     "    %cd /home/studio-lab-user/content/SDZ/extensions\n",
@@ -328,8 +323,7 @@
     "    %cd /home/studio-lab-user/content/SDZ/extensions/sd_dreambooth_extension\n",
     "    !pip install -r /home/studio-lab-user/content/SDZ/extensions/sd_dreambooth_extension/requirements.txt\n",
     "    clear_output()\n",
-    "    cprint(f\"DREAMBOOTH INSTALLED\", color=\"flat_cyan\")\n",
-    "\n",
+    "    print(COLOR_CYAN + \"DREAMBOOTH INSTALLED\" + COLOR_RESET)\n",
     "\n",
     "def opcion6():\n",
     "    import os\n",
@@ -340,26 +334,26 @@
     "    used = disk_space.used / (1024 ** 3)\n",
     "    free = disk_space.free / (1024 ** 3)\n",
     "    clear_output()\n",
-    "    cprint(f\"TOTAL STORAGE: [ {total:.2f} GB ] USED: [ {used:.2f} GB ] FREE: [ {free:.2f} GB ]\", color=\"flat_cyan\")\n",
+    "    print(COLOR_CYAN + f\"TOTAL STORAGE: [ {total:.2f} GB ] USED: [ {used:.2f} GB ] FREE: [ {free:.2f} GB ]\" + COLOR_RESET)\n",
     "\n",
     "def opcion7():\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
     "    clear_output()\n",
-    "    cprint(f\"CLEANED UNNECESSARY CACHE/FILES\", color=\"flat_cyan\")\n",
+    "    print(COLOR_CYAN + \"CLEANED UNNECESSARY CACHE/FILES\" + COLOR_RESET)\n",
     "    \n",
     "def opcion8():\n",
     "    !rm -rf /home/studio-lab-user/\n",
     "    clear_output()\n",
-    "    cprint(f\"RUN THIS CELL, IT WILL DELETE ENTIRE NOTEBOOK, OR IF YOU WANT A FRESH-INSTALL NOTEBOOK, then DO : RUN THIS CELL > STOP RUNTIME > STAR AGAIN\", color=\"flat_cyan\")\n",
+    "    print(COLOR_CYAN + \"RUN THIS CELL, IT WILL DELETE ENTIRE NOTEBOOK, OR IF YOU WANT A FRESH-INSTALL NOTEBOOK, then DO : RUN THIS CELL > STOP RUNTIME - STAR AGAIN\" + COLOR_RESET)\n",
     "\n",
     "def opcion9():\n",
     "    clear_output()\n",
-    "    cprint(f\"GOODBYE!\", color=\"flat_cyan\")\n",
+    "    print(COLOR_CYAN + \"GOODBYE!\" + COLOR_RESET)\n",
     "\n",
     "while True:\n",
-    "\n",
-    "    cprint(f\"SDZ MENU:\", color=\"flat_cyan\")\n",
+    "    print(\" \")\n",
+    "    print(COLOR_CYAN + \"SDZ MENU:\" + COLOR_RESET)\n",
     "    print(\" \")\n",
     "    print(\"1. Install SDZ\")\n",
     "    print(\"2. Update SDZ\")\n",
@@ -402,7 +396,7 @@
     "        break\n",
     "    \n",
     "    else:\n",
-    "        cprint(f\"INVALID OPTION. PLEASE SELECT A VALID OPTION\", color=\"flat_cyan\")\n"
+    "        print(COLOR_CYAN + \"INVALID OPTION. PLEASE SELECT A VALID OPTION\" + COLOR_RESET)\n"
    ]
   }
  ],
