--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -10,7 +10,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import time\n",
     "from IPython.display import clear_output, display, HTML\n",
     "from IPython.utils import capture\n",
     "import requests\n",
@@ -20,16 +19,15 @@
     "\n",
     "def opcion1():\n",
     "    print(COLOR_CYAN + \"WAIT A MOMENT WHILE THE INSTALLATION FINISH\" + COLOR_RESET)\n",
-    "    !pip install colablib\n",
-    "    !pip install -q --upgrade psutil\n",
     "    \n",
     "    !mkdir /home/studio-lab-user/content\n",
     "    %cd /home/studio-lab-user/content\n",
     "\n",
     "    !pip install -q --upgrade pip\n",
+    "    !pip install -q --upgrade psutil\n",
     "    !pip install -q --upgrade torchsde\n",
-    "    !pip install -q pytz\n",
-    "    !pip install -q tensorflow\n",
+    "    #!pip install -q pytz\n",
+    "    #!pip install -q tensorflow\n",
     "    \n",
     "    %conda install -q -y aria2\n",
     "    %conda install -q -y libglib2.0-0\n",
@@ -65,7 +63,7 @@
     "    #Vae\n",
     "    %cd /home/studio-lab-user/content/SDZ/models/VAE\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt -o vae-ft-mse-840000-ema-pruned.ckpt\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/sdxl-vae-fp16.safetensors -o sdxl-vae-fp16.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/sdxl-vae-fp16.safetensors -o sdxl-vae-fp16.safetensors\n",
     "\n",
     "    #Embeddings\n",
     "    %cd /home/studio-lab-user/content/SDZ/embeddings\n",
@@ -234,16 +232,17 @@
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
     "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
-    "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
+    "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py \n",
+    "    #2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
     "    \n",
     "def opcion4():\n",
     "    #Controlnet\n",
     "    canny = \"0\"\n",
-    "    openpose = \"1\"\n",
+    "    openpose = \"0\"\n",
     "    depth = \"1\"\n",
-    "    normal_map = \"1\"\n",
+    "    normal_map = \"0\"\n",
     "    mlsd = \"0\"\n",
     "    lineart = \"0\"\n",
     "    soft_edge = \"0\"\n",
