--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -126,13 +126,16 @@
     "    #!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
     "    #!git clone https://github.com/v8hid/infinite-zoom-automatic1111-webui.git\n",
     "    #!git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+    "\n",
+    "    #!git clone https://github.com/huchenlei/sd-webui-openpose-editor\n",
     "    #!git clone https://github.com/fkunn1326/openpose-editor.git\n",
+    "    #!git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
+    "    #!git clone https://github.com/hnmr293/posex.git\n",
+    "\n",
     "    #!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
     "    #!git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
     "    #!git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
     "    #!git clone https://github.com/alemelis/sd-webui-ar.git\n",
-    "    #!git clone https://github.com/hnmr293/posex.git\n",
-    "    #!git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
     "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
     "    #!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
     "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
