--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -93,7 +93,6 @@
     "    %cd /home/studio-lab-user/content/SDZ/extensions\n",
     "\n",
     "    !git clone https://github.com/etherealxx/batchlinks-webui\n",
-    "    #!git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
     "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
     "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111\n",
     "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\n",
@@ -107,8 +106,11 @@
     "    #!git clone https://github.com/A-I-Channel/explorer-image\n",
     "    #!git clone https://github.com/A-I-Channel/public-link\n",
     "\n",
+    "    #!git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
     "    #!sed -i '17,44d' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
     "    #!sed -i '17s/.*/    return False/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
+    "    #!git clone https://github.com/s0md3v/sd-webui-roop\n",
+    "    #!sed -i 's|shapes.append(chunk\\[\"score\"\\] > 0.7)|shapes.append(chunk[\"score\"] > 99999)|' /home/studio-lab-user/content/SDZ/extensions/sd-webui-roop/scripts/cimage.py\n",
     "\n",
     "    #!git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
     "    #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
@@ -127,8 +129,8 @@
     "    #!git clone https://github.com/v8hid/infinite-zoom-automatic1111-webui.git\n",
     "    #!git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
     "\n",
-    "    #!git clone https://github.com/huchenlei/sd-webui-openpose-editor\n",
-    "    #!git clone https://github.com/fkunn1326/openpose-editor.git\n",
+    "    !git clone https://github.com/huchenlei/sd-webui-openpose-editor\n",
+    "    !git clone https://github.com/fkunn1326/openpose-editor.git\n",
     "    #!git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
     "    #!git clone https://github.com/hnmr293/posex.git\n",
     "\n",
@@ -242,7 +244,7 @@
     "def opcion4():\n",
     "    #Controlnet\n",
     "    canny = \"0\"\n",
-    "    openpose = \"0\"\n",
+    "    openpose = \"1\"\n",
     "    depth = \"1\"\n",
     "    normal_map = \"0\"\n",
     "    mlsd = \"0\"\n",
